# scarse

./: CHANGES  INSTALL  TODO  configure.ac
data/profiles/: Makefile.in
data/targets/: LAYOUT-GS20
html/: README  README.french  oldnews.html
html/adjust/: black.html  geometry.html  gradient.html  index.html
html/goodies/profiles/: index.html
html/images/reference/: index.html
html/images/sample/: index.html
scarse-data/: Makefile.in
scarse-data/etc/: calibrate.options  cmap.options  ipb.options
scarse-data/profiles/: Makefile.in  profiles.pl
scarse-data/targets/: LAYOUT-IT87  LAYOUT-MACBETH  LAYOUT-Q60  TARGETS
scarse-html/: CHANGES  CREDITS  INSTALL  README  TODO  geometry.html  index.html  links.html  oldnews.html
scarse-html/adjust/: black.html  color.html  convergence.html  gamma.html  geometry.html  gradient.html  index.html  white.html
scarse-html/docs/: index.html
scarse-html/goodies/profiles/: index.html
scarse-html/howto/: geometry.html  index.html
scarse-html/images/: index.html
scarse-html/images/reference/: index.html
scarse-html/images/sample/: index.html
scarse-src/: CHANGES  CREDITS  INSTALL  Makefile.in  README  TODO  configure.ac
scarse-src/src/: Makefile.in  calibrate.c  cmap.c  fit.c  interp.c  ipb.c  matrix.c  scarse.h  sort.c  spaces.c  spaces.h  targets.c  util.c  util.h
scarse-src/src/imageio/: imageio.c  imageio.h  pack.c  ppm.c  tiff.c
src/: ipb.c  matrix.c  util.c
